Bug 123954 - "Build Index" button in KHelpCenter's "Build Search Index" dialog is not enabled when using keyboard to select search scope
Summary: "Build Index" button in KHelpCenter's "Build Search Index" dialog is not enab...
Status: RESOLVED FIXED
Alias: None
Product: khelpcenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Cornelius Schumacher
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-03-20 01:45 UTC by Brolin Empey
Modified: 2009-09-18 01:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Brolin Empey 2006-03-20 01:45:09 UTC
Version:            (using KDE KDE 3.5.1)
Installed from:    Compiled From Sources
Compiler:          gcc 3.3.5 
OS:                Linux

When you run KHelpCenter for the first time, it asks whether or not you want to create a search index.  If you choose to create the search index, a dialog box is displayed with the title "Build Search Index - KDE Help Center".  This dialog contains a list control with columns for "Search Scope" and "Status".  In my case, the only row in the table (item in the list) is for "Application Manuals".  The status for this list item is "Missing".  If I use the mouse to check the "Application Manuals" item in the "Search Scope" column, the "Build Index" button at the bottom right of the dialog is enabled.  This is the expected behaviour.  However, if I select the list item with the keyboard and press Space to check the "Application Manuals" item, the "Build Index" button is NOT enabled.  This is a blocking problem, since you cannot continue with the process of building the search index until the "Build Index" button is enabled.  This bug was likely overlooked by not testing the dialog using only the keyboard.
Comment 1 David Faure 2009-09-18 01:45:45 UTC
SVN commit 1025085 by dfaure:

Port the scope list from Q3ListView to QTreeWidget

and connect to itemChanged instead of itemClicked in order to fix a small bug (toggling with Key_Space)
BUG: 123954


 M  +20 -17    kcmhelpcenter.cpp  
 M  +8 -8      kcmhelpcenter.h  
 M  +13 -8     scopeitem.h  
 M  +41 -40    searchwidget.cpp  
 M  +7 -6      searchwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1025085