Port the scope list from Q3ListView to QTreeWidget

and connect to itemChanged instead of itemClicked in order to fix a small bug (toggling with Key_Space)
BUG: 123954

svn path=/trunk/KDE/kdebase/runtime/; revision=1025085